// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders avatar with icon 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#6200ee",
        "borderRadius": 32,
        "height": 64,
        "width": 64,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        Object {
          "height": 64,
        },
      ]
    }
  >
    <Text
      accessibilityElementsHidden={true}
      allowFontScaling={false}
      importantForAccessibility="no-hide-descendants"
      pointerEvents="none"
      style={
        Array [
          Object {
            "color": "rgba(0, 0, 0, .54)",
            "fontSize": 48,
          },
          Array [
            Object {
              "transform": Array [
                Object {
                  "scaleX": 1,
                },
              ],
            },
            Object {
              "backgroundColor": "transparent",
            },
          ],
          Object {
            "fontFamily": "Material Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`renders avatar with icon and custom background color 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FF0000",
        "borderRadius": 32,
        "height": 64,
        "width": 64,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        Object {
          "height": 64,
        },
      ]
    }
  >
    <Text
      accessibilityElementsHidden={true}
      allowFontScaling={false}
      importantForAccessibility="no-hide-descendants"
      pointerEvents="none"
      style={
        Array [
          Object {
            "color": "rgba(0, 0, 0, .54)",
            "fontSize": 48,
          },
          Array [
            Object {
              "transform": Array [
                Object {
                  "scaleX": 1,
                },
              ],
            },
            Object {
              "backgroundColor": "transparent",
            },
          ],
          Object {
            "fontFamily": "Material Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`renders avatar with image 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#6200ee",
        "borderRadius": 32,
        "height": 64,
        "width": 64,
      },
      undefined,
    ]
  }
>
  <Image
    source={
      Object {
        "src": "avatar.png",
      }
    }
    style={
      Object {
        "borderRadius": 32,
        "height": 64,
        "width": 64,
      }
    }
  />
</View>
`;

exports[`renders avatar with text 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#6200ee",
        "borderRadius": 32,
        "height": 64,
        "width": 64,
      },
      Object {},
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "#000000",
          "fontFamily": "Helvetica Neue",
          "textAlign": "left",
          "writingDirection": "ltr",
        },
        Array [
          Object {
            "textAlign": "center",
          },
          Object {
            "color": "rgba(0, 0, 0, .54)",
            "fontSize": 32,
            "height": 64,
            "lineHeight": 64,
          },
        ],
      ]
    }
  >
    JD
  </Text>
</View>
`;

exports[`renders avatar with text and custom background color 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FF0000",
        "borderRadius": 32,
        "height": 64,
        "width": 64,
      },
      Object {},
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "#000000",
          "fontFamily": "Helvetica Neue",
          "textAlign": "left",
          "writingDirection": "ltr",
        },
        Array [
          Object {
            "textAlign": "center",
          },
          Object {
            "color": "rgba(0, 0, 0, .54)",
            "fontSize": 32,
            "height": 64,
            "lineHeight": 64,
          },
        ],
      ]
    }
  >
    JD
  </Text>
</View>
`;

exports[`renders avatar with text and custom colors 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#6200ee",
        "borderRadius": 32,
        "height": 64,
        "width": 64,
      },
      Object {},
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "#000000",
          "fontFamily": "Helvetica Neue",
          "textAlign": "left",
          "writingDirection": "ltr",
        },
        Array [
          Object {
            "textAlign": "center",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 32,
            "height": 64,
            "lineHeight": 64,
          },
        ],
      ]
    }
  >
    JD
  </Text>
</View>
`;

exports[`renders avatar with text and custom size 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#6200ee",
        "borderRadius": 48,
        "height": 96,
        "width": 96,
      },
      Object {},
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "#000000",
          "fontFamily": "Helvetica Neue",
          "textAlign": "left",
          "writingDirection": "ltr",
        },
        Array [
          Object {
            "textAlign": "center",
          },
          Object {
            "color": "rgba(0, 0, 0, .54)",
            "fontSize": 48,
            "height": 96,
            "lineHeight": 96,
          },
        ],
      ]
    }
  >
    JD
  </Text>
</View>
`;
